# roiti_time_series_forecasting

./: .gitignore  DEPLOYMENT.md  LICENSE  Makefile  README.md  config.py  pyproject.toml  run_forecast.py  setup.py
docs/: Makefile  ROITI_DS_pre_interview_task.docx  conf.py  index.rst  make.bat
notebooks/: 01_Renewable_Energy_Forecasting.ipynb  02_Improved_Model.ipynb
src/: 20251109_roiti_case_study_juan_Fernandez.pptx  data_loader.py  feature_engineer.py  models.py
