[project]
name = "roiti-renewable-energy-forecasting"
version = "0.1.0"
description = "Day-ahead renewable energy generation forecasting for German power grid"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "notebook>=7.0.0",
    "scipy>=1.10.0",
    "python-dateutil>=2.8.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

